--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ API_PORT=<Your API listening port>
 DB_HOST=<Your database host>
 DB_PORT=<Your database port>
 DB_NAME=<Your database name>
+TOKEN_KEY=<Your token key>
+HASH_SALT=<Your hash salt number>
