--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ DB_HOST=<Your database host>
 DB_PORT=<Your database port>
 DB_NAME=<Your database name>
 TOKEN_KEY=<Your token key>
+TOKEN_EXP=<Your token expiration time in seconds>
 HASH_SALT=<Your hash salt number>
