--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^8.3.5",
     "@types/lodash": "^4.14.149",
     "@types/mongoose": "^5.5.32",
-    "@types/node": "^12.12.14"
+    "@types/node": "^12.12.14",
+    "@types/socket.io": "^2.1.4"
   }
 }
