--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "rootDir": "src/",
         "outDir": "build/",
         "sourceMap": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "typeRoots": ["types/"]
     }
 }
