Add "MAX_PICTURE_SIZE" in environment

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ WEB_SOCKET_PORT=Your websocket port
 TOKEN_KEY=Your token key
 TOKEN_EXP=Your token expiration time in seconds
 HASH_SALT=Your hash salt number
+MAX_PICTURE_SIZE=Your max user picture size in bytes
